[gd_scene load_steps=5 format=3 uid="uid://ohh8sxot6115"]

[ext_resource type="Texture2D" uid="uid://blinpkvtyislv" path="res://assets/objects/mortar.png" id="1_fuycw"]
[ext_resource type="Script" path="res://game/objects/mortar.gd" id="1_nep1u"]
[ext_resource type="Theme" uid="uid://bg721ml30kggd" path="res://assets/themes/hint_label_theme.tres" id="2_tgkre"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_21bkv"]
radius = 34.0
height = 74.0

[node name="Mortar" type="Area2D"]
script = ExtResource("1_nep1u")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_fuycw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_21bkv")

[node name="Label" type="Label" parent="."]
z_index = 10
offset_left = -49.0
offset_top = -52.0
offset_right = 49.0
offset_bottom = -29.0
theme = ExtResource("2_tgkre")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
z_index = 10
offset_left = -69.0
offset_top = -40.0
offset_right = 69.0
offset_bottom = -16.9999
theme = ExtResource("2_tgkre")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
